<resources>
    <string name="app_name">BharatMatrimony</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="dec_txt">Members with multiple photos get better responses. Do you still want to delete this photo?</string>
    <string name="whatsapp_txt">WhatsApp your photos to us @ +91 9xxxx xxxxx</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="upload_from_gallery">Upload from gallery</string>
    <string name="add_photos">ADD PHOTOS</string>
    <string name="header_txt">Photos are the first thing members look in your profile. Add multiple photos to get more matches</string>
    <string name="photo">photo</string>
    <string name="limit_txt">Maximum 6 photos</string>
    <string name="deleted_txt">Deleted successfully</string>
    <string name="whatsapp_error_txt">Please install WhatsApp App</string>
    <string name="add_photo">Add Photo</string>
    <string name="add_photos_txt">Add Photos</string>
</resources>