<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/add_photos"
        android:textSize="20sp"
        android:id="@+id/add_photo"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"/>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_marginStart="10dp"
         android:padding="10dp"
         android:layout_marginEnd="10dp"
         android:id="@+id/gallery_layout"
         app:layout_constraintTop_toBottomOf="@+id/add_photo"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_height="wrap_content">
         <ImageView
             android:layout_width="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             android:src="@android:drawable/ic_menu_gallery"
             app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/gallery_icon"
             android:layout_height="wrap_content"/>
         <TextView
             android:layout_width="wrap_content"
             android:text="@string/upload_from_gallery"
             android:textSize="16sp"
             android:layout_marginStart="10dp"
             app:layout_constraintBottom_toBottomOf="@id/gallery_icon"
             app:layout_constraintLeft_toRightOf="@id/gallery_icon"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_height="match_parent"/>
         <ImageView
             android:layout_width="wrap_content"
             android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_height="wrap_content"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:layout_width="match_parent"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/gallery_layout"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_height="0.5dp"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/camera_layout"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/gallery_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@android:drawable/ic_menu_camera"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/camera_icon"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/take_a_photo"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="@id/camera_icon"
            app:layout_constraintLeft_toRightOf="@id/camera_icon"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="match_parent"/>
        <ImageView
            android:layout_width="wrap_content"
            android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:layout_width="match_parent"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/camera_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="0.5dp"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/whatsapp_layout"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/camera_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@android:drawable/ic_menu_call"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/whatsapp_icon"
            app:layout_constraintRight_toLeftOf="@+id/whatsapp_share"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="0dp"
            android:text="@string/whatsapp_txt"
            android:textSize="16sp"
            android:maxLines="2"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="0dp"
            android:id="@+id/whatsapp_share"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/whatsapp_icon"
            app:layout_constraintRight_toLeftOf="@id/arrow"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_width="wrap_content"
            android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/arrow"
            android:visibility="visible"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>