<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/name_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activity.MainActivity">
        <TextView
            android:id="@+id/header_txt"
            android:text="@string/header_txt"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:gravity="start"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="180dp"
            app:cardCornerRadius="15dp"
            android:id="@+id/card_view"
            android:visibility="visible"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/header_txt"
            app:cardBackgroundColor="@color/light_grey"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_height="180dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="36dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@drawable/circle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:backgroundTint="@color/white"
                    app:srcCompat="@drawable/ic_baseline_add_24"
                    android:layout_height="36dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:padding="8dp"
                android:background="@drawable/shape"
                android:layout_margin="3dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/add_photo"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/photo_lst"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:visibility="gone"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/header_txt"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_photo"
            app:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/add_photos_txt"
            app:cornerRadius="20dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>